# faraday-pi

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
deploy/systemd/: faraday-app.service  faraday-llama-embed.service  faraday-llama-gen.service  install.sh
docs/: pi4-leaderboard.md  report.md
docs/assets/: README.md
examples/corpus/: pi-facts.md
monitoring/: README.md  docker-compose.yml  prometheus.yml
scripts/: 00_pi_setup.sh  10_build_llama.sh  20_download_models.sh  30_run_servers.sh  40_smoke_test.sh  50_mem_report.sh  60_run_app.sh  70_quant_sweep.sh  80_run_evals.sh  90_optimize.sh  95_gbnf_measure.sh  97_record_demo.sh  bootstrap.sh  demo_cli.sh  sync.ps1
tests/: bench_samples.py  conftest.py  eval_samples.py  test_bench_config.py  test_bench_integration.py  test_bench_parsers.py  test_bench_plot.py  test_bench_sweep.py  test_chunker.py  test_citations.py  test_cli.py  test_embedder.py  test_eval_corpus.py  test_eval_dataset.py  test_eval_generate.py  test_eval_judge.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_gbnf_compare.py  test_grammar.py  test_grammar_integration.py  test_grammar_wiring.py  test_index_store.py  test_ingest.py  test_integration_pi.py  test_llm_client.py  test_llm_stream.py  test_metrics.py  test_models.py  test_optimize.py  test_optimize_config.py  test_optimize_integration.py  test_optimize_parsers.py  test_optimize_plan.py  test_optimize_plot.py  test_parsers.py  test_preflight.py  test_prompt.py  test_rag.py  (+5 more)
(+104 files in other folders)
