[project]
name = "faraday"
version = "0.1.0"
description = "Air-gapped personal RAG appliance for the Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "sqlite-vec>=0.1.3",
  "pypdf>=4.0",
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
faraday = "faraday.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["integration: requires a running llama-server (run on the Pi)"]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
